--- a/src/components/Jogs/FormEdit/EditForm.module.css
+++ b/src/components/Jogs/FormEdit/EditForm.module.css
@@ -1,16 +1,38 @@
-.FormEdit {
+.EditForm {
     width: 503px;
     height: 379px;
     border-radius: 44px;
     background-color: #7ed321;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    position: absolute;
+    position: relative;
+}
+
+.saveForm {
+    margin-top: 70px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    justify-items: center;
+}
+
+.inputs {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.inputElements {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 25px;
 }
 
 .inputTitle {
-    width: 74px;
     margin-right: 15px;
     height: 19px;
     font-family: 'SFUIText', Arial, Helvetica, sans-serif;
@@ -28,7 +50,6 @@
     border-radius: 7px;
     border: solid 1px #979797;
     background-color: #ffffff;
-
 }
 
 .cancel {
