--- a/src/components/Jogs/NothingIsThere/NothingIsThere.module.css
+++ b/src/components/Jogs/NothingIsThere/NothingIsThere.module.css
@@ -1,13 +1,20 @@
-.NothingIsThere{
+.NothingIsThere {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    /*background-color: sienna;*/
+    color: #b0b0b0;
 }
 
-.nothingText{
+.smileWithText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nothingText {
+    margin-top: 50px;
     font-family: 'SFUIText', Arial, Helvetica, sans-serif;
     width: 182px;
     height: 58px;
@@ -19,7 +26,8 @@
     letter-spacing: normal;
     text-align: center;
 }
-.button{
+
+.button {
     width: 249px;
     height: 60px;
     border-radius: 36px;
