--- a/src/components/Runner/Runner.module.css
+++ b/src/components/Runner/Runner.module.css
@@ -1,19 +1,11 @@
 .Runner {
+    height: 90vh;
 }
 
 .underHeader {
-    height: 100vh;
-    /*background-color: green;*/
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-}
-
-.underHeaderSad {
-    /*background-color: #3a6b80;*/
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
     align-items: center;
 }
