--- a/src/components/SessionWindow/SessionWindow.module.css
+++ b/src/components/SessionWindow/SessionWindow.module.css
@@ -5,7 +5,7 @@
     background-color: #e990f9;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     justify-items: center;
     align-items: center;
 }
