--- a/src/components/Runner/Runner.module.css
+++ b/src/components/Runner/Runner.module.css
@@ -3,9 +3,10 @@
 }
 
 .underHeader {
-    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width: 420px) {
 }
