--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,4 @@
 .header {
-    /*width: 1440px;*/
     height: 116px;
     background-color: #7ed321;
     display: flex;
@@ -13,6 +12,9 @@
     width: 147px;
     height: 56px;
     object-fit: contain;
+    background-image: url('../../Files/Images/Logo/logo.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .nav {
@@ -21,8 +23,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
+}
+
+.desktopMenu {
+    display: block;
 }
 
 .afterNav {
@@ -31,6 +37,7 @@
 }
 
 .menuHeaderFont {
+    margin-right: 45px;
     height: 16px;
     font-family: 'SFUIText', Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -44,26 +51,79 @@
     color: #ffffff;
 }
 
-.JOGS {
-    width: 40px;
-}
-
-.INFO {
-    width: 35px;
-}
-
-.CONTACT-US {
-    width: 96px;
-}
-
 .filter {
     width: 26px;
     height: 26px;
-    object-fit: contain;
+    margin-right: 36px;
 }
 
 .filter_active {
     width: 39px;
     height: 39px;
-    object-fit: contain;
+    margin-right: 36px;
+}
+
+.burger {
+    display: none;
+}
+
+.showFilter {
+    display: block;
+}
+
+@media screen and (max-width: 420px) {
+    .header {
+        width: 100%;
+        height: 77px;
+        background-color: #7ed321;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .logo {
+        margin: 20px 25px;
+        width: 98px;
+        height: 37px;
+    }
+
+    .nav {
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+    .desktopMenu {
+        display: none;
+    }
+
+    .filter {
+        margin-right: 0;
+    }
+
+    .filter_active {
+        margin-right: 0;
+    }
+
+    .burger {
+        display: block;
+        width: 28px;
+        height: 26px;
+        background-image: url('../../Files/Images/Mobile/menu/menu.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-right: 25px;
+        margin-left: 45px;
+    }
+
+    .showFilter {
+        display: none;
+    }
+    .showFilterMobile{
+        display: block;
+    }
 }
