--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -1,22 +1,15 @@
 .Info {
-
-}
-
-p {
-    width: 614px;
-    height: 191px;
-    font-family: 'SFUIText', Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.71;
-    letter-spacing: normal;
+    margin-top: 85px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
     color: #7ed321;
-    width: 89px;
+    width: 614px;
     height: 43px;
     font-family: 'SFUIText', Arial, Helvetica, sans-serif;
     font-size: 36px;
@@ -25,5 +18,42 @@ p {
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
-    text-align: center;
+    margin-bottom: 15px;
+}
+
+.text {
+    width: 614px;
+    font-family: 'SFUIText', Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: normal;
+    margin-bottom: 30px;
+}
+
+@media screen and (max-width: 420pt) {
+    .Info {
+        width: 350px;
+        margin-top: 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title {
+        width: 320px;
+        height: 30px;
+        font-size: 25px;
+        margin-bottom: 6px;
+    }
+
+    .text {
+        width: 320px;
+        font-size: 12px;
+        line-height: 24px;
+        margin-bottom: 30px;
+    }
 }
