--- a/src/components/Jogs/Filter/Filter.module.css
+++ b/src/components/Jogs/Filter/Filter.module.css
@@ -17,7 +17,7 @@
     letter-spacing: normal;
     text-align: center;
     color: #5d5d5d;
-    margin-right: 15px;
+    margin-right: 16px;
 }
 
 .input {
@@ -27,4 +27,15 @@
     border: solid 1px #979797;
     background-color: #ffffff;
     margin-right: 45px;
+}
+
+@media screen and (max-width: 420px) {
+    .Filter {
+        justify-content: space-around;
+    }
+
+    .input {
+        width: 72px;
+        margin-right: 0;
+    }
 }
