--- a/src/components/Jogs/Jogs.module.css
+++ b/src/components/Jogs/Jogs.module.css
@@ -1,5 +1,5 @@
 .jogs {
-    height: 100%;
+    /*height: 100%;*/
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -17,13 +17,33 @@
     bottom: 40px;
 }
 
-.EditForm{
+.EditForm {
     width: 100%;
-    height: 100%;
+    height: 80%;
     position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     justify-items: center;
     align-items: center;
+}
+
+.nothingIsThere {
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 420px) {
+    .addImg {
+        width: 47px;
+        height: 47px;
+
+        right: 30px;
+        bottom: 30px;
+    }
 }
