--- a/src/components/Jogs/NothingIsThere/NothingIsThere.module.css
+++ b/src/components/Jogs/NothingIsThere/NothingIsThere.module.css
@@ -1,3 +1,13 @@
+.container {
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .NothingIsThere {
     /*background-color: #333333;*/
     display: flex;
